--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,21 @@
 {
+  "version": 2,
+  "public": false,
   "builds": [
     {
-      "src": "main.py",
-      "use": "@vercel/python"
+      "src": "zenn_badge/app.py",
+      "use": "@now/python"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "main.py"
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
+        "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+      },
+      "src": "/.*",
+      "dest": "zenn_badge/app.py"
     }
   ]
 }
