--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "public": false,
   "builds": [
     {
-      "src": "zenn_badge/app.py",
+      "src": "main.py",
       "use": "@now/python"
     }
   ],
@@ -15,7 +15,7 @@
         "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
       },
       "src": "/.*",
-      "dest": "zenn_badge/app.py"
+      "dest": "main.py"
     }
   ]
 }
